<resources>
    <string name="app_name">ViewPagerTabLayoutTwo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geoaxborot">Geoaxborot</string>
    <string name="geoaxborot_moduli_orqali_siz_o_zingizga_yaqin_bo_lgan_migrantlar_va_boshqa_muassasalar_haqida_ma_lumot_olishingiz_mumkin">Geoaxborot moduli orqali siz o\'zingizga yaqin bo\'lgan migrantlar va boshqa muassasalar haqida ma\'lumot olishingiz mumkin</string>
    <string name="todo">TODO</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="o_tqazib_yuborish">O\'tqazib yuborish</string>
</resources>