<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ItemViewPagerFragment">


    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bir"
        app:layout_constraintBottom_toTopOf="@id/txt_tytle"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_tytle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geoaxborot"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintVertical_bias="0.7" />
    
    <TextView
        android:id="@+id/txt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/geoaxborot_moduli_orqali_siz_o_zingizga_yaqin_bo_lgan_migrantlar_va_boshqa_muassasalar_haqida_ma_lumot_olishingiz_mumkin"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_tytle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="#166BFA"
        android:translationY="40dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_text">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ro_yxatdan_o_tish"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:alpha="0.2"
        android:backgroundTint="#166BFA"
        android:translationY="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintVertical_chainStyle="packed">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/o_tqazib_yuborish"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>